--- a/DjangoWebProject3/DjangoWebProject3/bin/AzureSetup.cfg
+++ b/DjangoWebProject3/DjangoWebProject3/bin/AzureSetup.cfg
@@ -1,5 +1,5 @@
 interpreter_path=%INTERPRETERPATH%
-interpreter_path_emulated=c:\users\mina37\documents\visual studio 2015\Projects\DjangoWebProject3\DjangoWebProject3\env\Scripts\python.exe
+interpreter_path_emulated=C:\Users\Mina37\documents\visual studio 2015\Projects\DjangoWebProject3\DjangoWebProject3\env\Scripts\python.exe
 interpreter_version=3.5
 python_path_variable=PYTHONPATH
 python_path=%ROOTDIR%
